--- a/src/components/PostTags/PostTags.scss
+++ b/src/components/PostTags/PostTags.scss
@@ -1,5 +1,6 @@
 .category_link,
-.tag_link {
+.tag_link,
+.tag_link_last {
 	background: #eee;
 	border-radius: 3px 0 0 3px;
 	color: #999;
@@ -16,7 +17,8 @@
 }
 
 .category_link::before,
-.tag_link::before {
+.tag_link::before,
+.tag_link_last::before {
 	background: #fff;
 	border-radius: 10px;
 	box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
@@ -39,7 +41,7 @@
 	top: 0;
 }
 
-.tag_link::after {
+.tag_link_last::after {
 	background: #fff;
 	border-bottom: 19px solid transparent;
 	border-left: 15px solid #eee;
@@ -51,13 +53,15 @@
 }
 
 .category_link:hover,
-.tag_link:hover {
+.tag_link:hover,
+.tag_link_last:hover {
 	background-color: #6db7d0;
 	text-decoration: none;
 	color: white;
 }
 
 .category_link:hover::after,
-.tag_link:hover::after {
+.tag_link:hover::after,
+.tag_link_last:hover::after {
 	border-left-color: #6db7d0;
 }
