--- a/src/components/PostListing/PostListing.css
+++ b/src/components/PostListing/PostListing.css
@@ -1,5 +1,5 @@
 .post-grid-container {
-	display: grid;
+	/* display: grid; */
 	grid-template-columns: 1fr;
 	/* grid-template-columns: 1fr 4fr; */
 	padding: 10px;
@@ -8,18 +8,90 @@
 
 .post-grid-item {
 	text-align: left;
+	/* padding-bottom: 30px; */
+	padding-top: 30px;
 }
 
 .align-right {
 	text-align: left;
 }
 
-@media (min-width: 58em) {
-	.post-grid-container {
-		grid-template-columns: 1fr 4fr;
-	}
+.listingLink {
+	color: #333333;
+    position: relative;
+    text-decoration: none;
+    font-weight: 700;
+    display: inline-block;
+    overflow: hidden;
+    vertical-align: top;
+    transition: all 0.4s ease;
+    padding: 0px 4px;
+    border-radius: 2px;
+	font-size: 30px;
+	border-bottom: 1px #cccccc dotted;
+    width: 100%;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+}
 
-	.align-right {
+.listingLink:hover {
+	color: #45bfe7;
+}
+
+.listingLink:hover::after {
+	height: calc(100% + 8px);
+}
+
+.listingExcerpt {
+    padding-bottom: 25px;
+}
+
+
+.category_listingLink {
+    border-radius: 3px 0 0 3px;
+    color: #999;
+    display: inline;
+    line-height: 24px;
+    padding: 6px 20px 6px 23px;
+    position: relative;
+    text-decoration: none;
+    font-size: 14px;
+    transition: color 0.1s ease;
+    border-radius: 4px;
+    font-weight: bold;
+    margin-right: 5px;
+}
+
+.category_listingLink:hover {
+	color: #45bfe7;
+}
+
+.category_listingLink::before {
+    background: #45bfe7;
+    border-radius: 10px;
+    box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
+    content: '';
+    height: 8px;
+    left: 8px;
+    position: absolute;
+    width: 8px;
+    top: 12px;
+}
+
+@media (min-width: 58em) {
+	/* .post-grid-container {
+		grid-template-columns: 1fr 4fr;
+	} */
+
+	/* .align-right {
 		text-align: right;
-	}
+    } */
+    
+    .listingLink {
+        font-size: 40px;
+    }
+
+    .category_listingLink {
+        font-size:17px;
+    }
 }
